redpers.css
/*  TIEMPOS FONT */
/*  TIEMPOS HEADLINE is for citates and article titles. */
/*  TIEMPOS TEXT is for article text */
/*  INTER is for regular text, small headers and other pieces of text */
@font-face {
 font-family: "Tiempos Text";
 src: url("./fonts/TiemposText-Regular.otf") format("opentype");
 font-weight: normal;
 font-style: normal;
}

@font-face {
 font-family: "Tiempos Text";
 src: url("./fonts/TiemposText-RegularItalic.otf") format("opentype");
 font-weight: normal;
 font-style: italic;
}

@font-face {
 font-family: "Tiempos Headline";
 src: url("./fonts/TiemposHeadline-Bold.otf") format("opentype");
 font-weight: bold;
 font-style: normal;
}

body {
 /* --- COLORS --- */

 /* -- PRIMARY COLOR (RED) -- */
 --primary-color: rgb(232, 83, 64); /* #E85340 */
 --primary-color-light: rgb(249, 205, 200); /* #F9CDC8 */
 --primary-color-lighter: rgb(249, 212, 207); /* #F9D4CF */
 --primary-color-lightest: rgb(255, 244, 242); /* #FFF4F2 */
 --primary-color-accent: rgb(232, 83, 64); /* #E85340 */ /* Bruinrood */

 /* -- SECONDARY COLOR (GREEN) -- */
 --secondary-color: rgb(244, 251, 233); /* #F4FBE9 */
 --secondary-color-dark: rgb(129, 165, 72); /* #81A548 */

 /* Grijstinten */
 --black: rgb(0, 0, 0); /* #000000 */
 --black-opacity: rgba(0, 0, 0, 0.71); /* #000000B5 */
 --white: rgb(255, 255, 255); /* #FFFFFF */
 --black-author: rgb(68, 68, 68); /* #444444 */
 --grey: #AAAAAA; 
 --darkgrey: rgb(123, 123, 122); /* #7B7B7A */
 --lightgrey: rgb(225, 225, 225); /* #E1E1E1 */

 /* --- */
 /* --- TYPOGHRAPHY */

 /* DEFINE FONT-FAMILIES */
 --font-default: "Inter", sans-serif;
 --font-article: "Tiempos Text", sans-serif;
 --font-heading-important: "Tiempos Headline", sans-serif;

 /* DEFINE FONT-SIZES FOR TEXTS*/

 --font-size-text: 12px;
 --font-size-meta: 11px;
 --font-size-intro: 21px;

 /* DEFINE FONT-SIZES FOR HEADERS*/

 --font-size-header-xxl: 48px;
 --font-size-header-xl: 38px;
 --font-size-header-l: 32px;
 --font-size-header-m: 20px;
 --font-size-header-s: 18px;
 --font-size-header-xs: 14px;

 /*  LETTER SPACINGS  */

 --letter-spacing-xs: -2%;
 --letter-spacing-s: -1%;
 --letter-spacing-m: 8%;
 --letter-spacing-l: 10%;

 /*  LINE HEIGHTS  */

 --line-height-l: 150%; /*artikeltekst*/
 --line-height-m: 144%; /*Introtekst, donatiebox, auteurtekst*/
 --line-height-s: 125%; /*uitgelichte titel*/
 --line-height-xs: 120%; /*Koptekst*/

 /* Base values for body */

 margin: 0;
 padding: 0;
 box-sizing: border-box;
 font-family: var(--font-default); /* Fallback font */
 color: var(--black); /* base text color */
}

@media (prefers-contrast: more) { /* WCAG AAA colors */
 body {
  --primary-color: #841E10;
  --primary-color-accent: #8b504b;
  --darkgrey: #757575;
  --secondary-color-dark: #4B5F2B;
 }
}

/* HEADINGS */

h1,
.h1 {
 /* give an element h1 class if you want a bigger title without having multiple h1 elements on the sdame page */
 font-size: var(--font-size-header-l);
 color: var(--black);
 line-height: var(--line-height-xs);
 font-weight: bold;
 font-family: var(--font-heading-important);
}

h2,
.h2 {
 font-size: var(--font-size-header-m);
 color: var(--black);
 font-weight: bold;
}

h1.heading_article,
.h1.heading_article,
h2.heading_article,
.h2.heading_article {
 /*Artikelkop */
 font-family: var(--font-heading-important);
 font-weight: bold;
 line-height: var(--line-height-xs);
 font-size: var(--font-size-header-xxl);
}

h1.heading_quote,
.h1.heading_quote,
h2.heading_quote,
.h2.heading_quote {
 /*Quote */
 font-family: var(--font-heading-important);
 font-weight: bold;
 line-height: var(--line-height-xs);
 font-size: var(--font-size-header-xl);
}

h3,
.h3 {
 font-size: var(--font-size-header-s);
 color: var(--black);
 font-weight: 900;
 letter-spacing: var(--letter-spacing-s);
 line-height: var(--line-height-l);
}
h4,
.h4 {
 font-size: var(--font-size-header-xs);
 color: var(--black);
 font-weight: bold;
 letter-spacing: var(--letter-spacing-xs);
 line-height: var(--line-height-l);
}


/* TEXTS */
p {
 /* base values for text */
 font-size: var(--font-size-text);
}

p a {
 /* links in text */
 color: var(--primary-color);
 position: relative;
 &:after { /*underline for hover/focus effect */
  content: "";
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 2px;
  bottom: -2px;
  left: 0;
  background-color: var(--primary-color);
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
 }
 

 &:hover,
 &:focus { /* change the underline from invincible to full width */
  &:after {
   transform: scaleX(1);
   transform-origin: bottom left;
  }
 }
}

.text_meta {
 /* Metatekst */
 font-weight: bold;
 line-height: var(--line-height-m);
 font-size: var(--font-size-meta);
 letter-spacing: var(--letter-spacing-l);
}

.text_label_top {
 /*bovenkop*/
 font-weight: bold;
 letter-spacing: var(--letter-spacing-m);
}

.text_intro {
 /*intro text*/
 font-weight: bold;
 font-size: var(--font-size-intro);
 letter-spacing: var(--letter-spacing-s);
}

.text_subheading {
 /* tussenkop */
 font-weight: 900;
 font-size: var(--font-size-header-s);
 line-height: var(--line-height-l);
}
/* --- BUTTONS AND FORMS --- */

/* BUTTONS */

.button_utility {
 /* three grey buttons */
 background-color: var(--light-border);
 color: var(--grey-text);
 width: 3rem;
 height: 3rem;
 justify-content: center;
 padding: 4px;
 font-size: 1rem;
 letter-spacing: 1px;
 line-height: 20px;
 display: flex;
 justify-content: space-between;
 align-items: center;
 &:hover,
 &:focus {
  background-color: var(--black) !important;
  color: var(--white) !important;
  svg,
  svg > * {
   color: var(--white);
   fill: var(--white);
  }
 }
}

.button_play {
 /* the button to play and pause reading the article */
 column-gap: 10px;
 padding: 4px 1rem 4px 4px;
 background-color: var(--primary-color-light);
 color: var(--primary-color-accent);
 padding: 4px;
 font-size: 1rem;
 letter-spacing: 1px;
 line-height: 20px;
 display: flex;
 justify-content: space-between;
 align-items: center;

 &:hover,
 &:focus {
  background-color: var(--black) !important;
  color: var(--white) !important;
  svg,
  svg > * {
   color: var(--white);
   fill: var(--white);
  }
 }

 &.silent {
  #audio_stop {
   display: none;
  }
 }

 svg,
 svg > * {
  color: var(--primary-color-accent);
  fill: var(--primary-color-accent);
 }
}

.button_menu {
 /* cta buttons in menu */
 color: var(--white);
 display: block;
 padding: 6px 1.5em;
 background-size: 100% 200%;
 transition: 0.3s ease;
 background-position: bottom;
 background-image: linear-gradient(var(--black) 50%, var(--primary-color) 50%);
 &:focus,
 &:hover {
  background-position: top;
 }
}

.button_subscribe {
 /* Nieuwsletter popup */
 padding: 2px 1.5em;
 background-size: 100% 200%;
 transition: 0.3s ease;
 background-position: bottom;
 background-image: linear-gradient(var(--black) 50%, var(--primary-color) 50%);
 color: var(--white);
 font-size: 15px;
 padding: 0.5em;
 border-radius: 3px;
 text-align: center;
 width: 100%;
 display: block;
 svg {
  width: 1em;
  height: 1em;
  > * {
   fill: var(--white);
   clip-path: var(--white);
  }
 }

 &:hover,
 &:focus {
  background-position: top;
 }
 @media (min-width: 400px) {
  padding: 1em 2em;
 }
}

.button_search {
 /* button with search icon */
 height: 48px;
 width: 50px;
 background-color: var(--grey);
 transition: 0.3s ease;
 svg {
  width: 16px;
  height: 16px;
  fill: var(--white);
 }
 &:focus,
 &:hover {
  background-color: var(--black);
 }
}

.button_readmore {
 /*button at authorinfo with chevron */
 background-color: var(--lightgrey);
 color: var(--darkgrey);
 width: 3rem;
 height: 3rem;
 &:hover,
 &:focus {
  background-color: var(--black);
  svg {
   path {
    fill: var(--white);
   }
  }
 }
}

/* FORMS */
button, /* Remove base button styling because it blows */
input[type="submit"], 
input[type="reset"] {
 background: none;
 color: inherit;
 border: none;
 padding: 0;
 font: inherit;
 cursor: pointer;
}

form.form_search {
 display: flex;
 border: 1px solid var(--black);
 input[type="text"] {
  padding-left: calc(50px / 3);
  padding-right: calc(50px / 3);
  height: 46px;
  border: 0;
  flex: 1;
  max-height: 46px;
 }

 button {
  height: 48px;
  width: 50px;
  background-color: var(--darkgrey);
  svg {
   width: 16px;
   height: 16px;
   fill: var(--white);
  }
 }
}

/* --- SHAPES --- */

.square_seperator {
 /* SMALL SQUARE */
 width: 12px;
 height: 12px;
 background-color: var(--lightgrey);
 border-radius: 1px; /* Adds a 1px border radius */
 position: relative;
 &.primary {
  /* red version */
  background-color: var(--primary-color);
 }
}

